Add user master CRUD pages and API wiring
